--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 19 09:47:48 IST 2020
-sdk.dir=C\:\\Users\\91972\\AppData\\Local\\Android\\Sdk
+#Sat Mar 28 19:35:42 IST 2020
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
